[package]
name = "qr-tester"
version = "0.2.0"
edition = "2024"
authors = ["kookyleo <kookyleo@gmail.com>"]
license = "Apache-2.0"
description = "A CLI tool to scan QR codes from images and benchmark performance"
repository = "https://github.com/kookyleo/qr-tester"
homepage = "https://github.com/kookyleo/qr-tester"
keywords = ["qr-code", "scanner", "benchmark", "cli", "performance"]
categories = ["command-line-utilities", "multimedia::images"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
rqrr = "0.8"
rxing = "0.8"
quircs = "0.10"
zbar-rust = "0.0.24"
imageproc = "0.25"
walkdir = "2.5"
anyhow = "1.0"
colored = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "qr-tester"
path = "src/main.rs"
